【第 2 节】初始化环境

--- a/ai-rag-knowledge/ai-rag-knowledge-api/pom.xml
+++ b/ai-rag-knowledge/ai-rag-knowledge-api/pom.xml
@@ -6,10 +6,25 @@
     <parent>
         <groupId>com.dasi</groupId>
         <artifactId>ai-rag-knowledge</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
 
     <artifactId>ai-rag-knowledge-api</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-core</artifactId>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
