--- a/mcp-server-csdn/pom.xml
+++ b/mcp-server-csdn/pom.xml
@@ -34,17 +34,15 @@
     </dependencyManagement>
 
     <dependencies>
-<!--        &lt;!&ndash; SSE / 响应式：WebFlux &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-webflux</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
 
-<!--        &lt;!&ndash; Spring AI MCP Server: WebFlux SSE 模式 &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.ai</groupId>-->
-<!--            <artifactId>spring-ai-mcp-server-webflux-spring-boot-starter</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-mcp-server-webflux-spring-boot-starter</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.ai</groupId>
