--- a/ai-mcp/pom.xml
+++ b/ai-mcp/pom.xml
@@ -41,6 +41,11 @@
                 <artifactId>fastjson</artifactId>
                 <version>2.0.28</version>
             </dependency>
+            <dependency>
+                <groupId>me.paulschwarz</groupId>
+                <artifactId>spring-dotenv</artifactId>
+                <version>4.0.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
