完成 RootNode 和 ApiNode，测试通过，后续添加更多的 Node

--- a/ai-agent/ai-agent-app/pom.xml
+++ b/ai-agent/ai-agent-app/pom.xml
@@ -137,6 +137,7 @@
                 <configuration>
                     <skipTests>true</skipTests>
                     <testFailureIgnore>false</testFailureIgnore>
+                    <argLine>-Xshare:off</argLine>
                     <includes>
                         <include>**/*Test.java</include>
                     </includes>
