实现了整个链路的串通，修复了部分bug

--- a/ai-agent/ai-agent-app/pom.xml
+++ b/ai-agent/ai-agent-app/pom.xml
@@ -147,7 +147,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.dasi.Application</mainClass>
+                    <mainClass>com.dasi.AgentApplication</mainClass>
                     <layout>JAR</layout>
                 </configuration>
             </plugin>
