--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.17",
     "vite": "^7.2.4"
   }
 }
