--- a/ai-agent/docs/docker/docker-compose.yml
+++ b/ai-agent/docs/docker/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 networks:
   ai-agent:
     driver: bridge
@@ -82,13 +80,12 @@ services:
     platform: linux/amd64
     restart: always
     ports:
-      - "3000:3000"
+      - "3001:3000"
     environment:
       TZ: ${TZ}
       SQL_DSN: ${ONEAPI_DB_USER}:${ONEAPI_DB_PASS}@tcp(mysql:3306)/${ONEAPI_DB_NAME}?charset=utf8mb4&parseTime=True&loc=Local
     depends_on:
-      mysql:
-        condition: service_healthy
+      - mysql
     networks:
       - ai-agent
 
@@ -105,11 +102,6 @@ services:
       - "9200:9200"
     volumes:
       - ${HOME}/docker/elasticsearch/data:/usr/share/elasticsearch/data
-    healthcheck:
-      test: ["CMD-SHELL", "curl -fsS http://localhost:9200/_cluster/health?wait_for_status=yellow&timeout=30s >/dev/null || exit 1"]
-      interval: 10s
-      timeout: 10s
-      retries: 20
     networks:
       - ai-agent
 
@@ -128,8 +120,7 @@ services:
       - '9600:9600'
       - '50000:50000/tcp'
     depends_on:
-      elasticsearch:
-        condition: service_healthy
+      - elasticsearch
     networks:
       - ai-agent
 
@@ -143,8 +134,59 @@ services:
     ports:
       - '5601:5601'
     depends_on:
-      elasticsearch:
-        condition: service_healthy
+      - elasticsearch
+    networks:
+      - ai-agent
+
+  prometheus:
+    image: prom/prometheus:v2.47.2
+    container_name: prometheus
+    restart: always
+    ports:
+      - "9090:9090"
+    volumes:
+      - ${HOME}/docker/prometheus/data:/prometheus
+      - ../prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    networks:
+      - ai-agent
+
+  grafana:
+    image: grafana/grafana:10.2.0
+    container_name: grafana
+    restart: always
+    ports:
+      - "3000:3000"
+    volumes:
+      - ${HOME}/docker/grafana/data:/var/lib/grafana
+    depends_on:
+      - prometheus
+    networks:
+      - ai-agent
+
+  grafana-mcp:
+    image: mcp/grafana
+    container_name: grafana-mcp
+    restart: unless-stopped
+    ports:
+      - "8000:8000"
+    environment:
+      - GRAFANA_URL=http://grafana:3000
+      - GRAFANA_API_KEY=${GRAFANA_API_KEY}
+    depends_on:
+      - grafana
+    networks:
+      - ai-agent
+
+  node-exporter:
+    image: prom/node-exporter:v1.9.1
+    container_name: node-exporter
+    restart: always
+    ports:
+      - "9100:9100"
+    volumes:
+      - ../node-exporter:/host/tmp:ro
+    command:
+      - "--collector.textfile.directory=/host/tmp"
     networks:
       - ai-agent
 
