增加 data.sql 数据，消除了 String 明文，统一通过枚举获得，改善了 prompt，完善了 sse.html，完善了 Controller

--- a/ai-agent/ai-agent-api/pom.xml
+++ b/ai-agent/ai-agent-api/pom.xml
@@ -26,6 +26,12 @@
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-core</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.dasi</groupId>
+            <artifactId>ai-agent-types</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
