--- a/ai-agent/ai-agent-app/pom.xml
+++ b/ai-agent/ai-agent-app/pom.xml
@@ -22,6 +22,10 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-core</artifactId>
         </dependency>
@@ -147,7 +151,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.dasi.AgentApplication</mainClass>
+                    <mainClass>com.dasi.Application</mainClass>
                     <layout>JAR</layout>
                 </configuration>
             </plugin>
