--- a/ai-agent/ai-agent-infrastructure/pom.xml
+++ b/ai-agent/ai-agent-infrastructure/pom.xml
@@ -14,6 +14,10 @@
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
