--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "dompurify": "^3.0.8",
+    "highlight.js": "^11.10.0",
+    "marked": "^12.0.2",
     "pinia": "^2.2.6",
     "vue": "^3.5.24",
     "vue-router": "^4.4.5"
