--- a/ai-agent/pom.xml
+++ b/ai-agent/pom.xml
@@ -114,6 +114,11 @@
                 <artifactId>spring-dotenv</artifactId>
                 <version>4.0.0</version>
             </dependency>
+            <dependency>
+                <groupId>org.eclipse.jgit</groupId>
+                <artifactId>org.eclipse.jgit</artifactId>
+                <version>5.13.0.202109080827-r</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.springframework.ai</groupId>
