--- a/backend/ai-agent-domain/pom.xml
+++ b/backend/ai-agent-domain/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>org.eclipse.jgit</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+        </dependency>
+
         <!-- AI 框架 -->
         <dependency>
             <groupId>org.springframework.ai</groupId>
