--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vue-flow/background": "^1.3.2",
+    "@vue-flow/controls": "^1.1.3",
+    "@vue-flow/core": "^1.48.2",
+    "@vue-flow/minimap": "^1.5.4",
     "axios": "^1.7.9",
     "dompurify": "^3.0.8",
     "highlight.js": "^11.10.0",
