部署云服务器

--- a/backend/docs/docker/docker-compose.yml
+++ b/backend/docs/docker/docker-compose.yml
@@ -42,6 +42,7 @@ services:
       - ${HOME}/docker/mysql/data:/var/lib/mysql
       - ${HOME}/docker/mysql/conf:/etc/mysql/conf.d:ro
       - ${HOME}/docker/mysql/logs:/logs
+      - ${PWD}/mysql:/docker-entrypoint-initdb.d:ro
     healthcheck:
       test: ["CMD-SHELL", "mysqladmin ping -h localhost -p${MYSQL_ROOT_PASSWORD} --silent"]
       interval: 5s
@@ -199,30 +200,5 @@ services:
 #      - ${HOME}/docker/ollama:/root/.ollama
 #    ports:
 #      - "11434:11434"
-#    networks:
-#      - ai-agent
-#
-#  # ===================== RabbitMQ =====================
-#  rabbitmq:
-#    image: rabbitmq:3.13-management
-#    container_name: rabbitmq
-#    hostname: rabbitmq
-#    restart: always
-#    ports:
-#      - "5672:5672"
-#      - "15672:15672"
-#    environment:
-#      RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER}
-#      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS}
-#      TZ: ${TZ}
-#    volumes:
-#      - ${HOME}/docker/rabbitmq/data:/var/lib/rabbitmq
-#      - ${HOME}/docker/rabbitmq/log:/var/log/rabbitmq
-#      - ${HOME}/docker/rabbitmq/plugins/rabbitmq_delayed_message_exchange-3.13.0.ez:/opt/rabbitmq/plugins/rabbitmq_delayed_message_exchange-3.13.0.ez
-#    command: >
-#      bash -c "
-#      rabbitmq-plugins enable --offline rabbitmq_delayed_message_exchange &&
-#      rabbitmq-server
-#      "
 #    networks:
 #      - ai-agent
