--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@vue-flow/minimap": "^1.5.4",
     "axios": "^1.7.9",
     "dompurify": "^3.0.8",
+    "echarts": "^5.5.0",
     "highlight.js": "^11.10.0",
     "marked": "^12.0.2",
     "pinia": "^2.2.6",
