--- a/backend/docs/docker/docker-compose.yml
+++ b/backend/docs/docker/docker-compose.yml
@@ -1,9 +1,4 @@
-networks:
-  ai-agent:
-    driver: bridge
-
 services:
-
   # ===================== PostgreSQL =====================
   pgvector:
     image: pgvector/pgvector:pg16
@@ -12,16 +7,16 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
-      PGPASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${USERNAME}
+      POSTGRES_PASSWORD: ${PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB_NAME}
+      PGPASSWORD: ${PASSWORD}
       TZ: ${TZ}
     volumes:
-      - ${HOME}/docker/pgvector/data:/var/lib/postgresql/data
-      - ${PWD}/pgvector/table.sql:/docker-entrypoint-initdb.d/table.sql:ro
+      - pgvector_data:/var/lib/postgresql/data
+      - ./pgvector/table.sql:/docker-entrypoint-initdb.d/table.sql:ro
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -h localhost -U ${POSTGRES_USER} -d ${POSTGRES_DB}" ]
+      test: [ "CMD-SHELL", "pg_isready -h localhost -U ${USERNAME} -d ${POSTGRES_DB_NAME}" ]
       interval: 5s
       timeout: 10s
       retries: 10
@@ -36,15 +31,13 @@ services:
     ports:
       - "3306:3306"
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${PASSWORD}
       TZ: ${TZ}
     volumes:
-      - ${HOME}/docker/mysql/data:/var/lib/mysql
-      - ${HOME}/docker/mysql/conf:/etc/mysql/conf.d:ro
-      - ${HOME}/docker/mysql/logs:/logs
-      - ${PWD}/mysql:/docker-entrypoint-initdb.d:ro
+      - mysql_data:/var/lib/mysql
+      - ./mysql:/docker-entrypoint-initdb.d:ro
     healthcheck:
-      test: ["CMD-SHELL", "mysqladmin ping -h localhost -p${MYSQL_ROOT_PASSWORD} --silent"]
+      test: ["CMD-SHELL", "mysqladmin ping -h localhost -p${PASSWORD} --silent"]
       interval: 5s
       timeout: 10s
       retries: 10
@@ -63,11 +56,11 @@ services:
       - --appendonly
       - "yes"
       - --requirepass
-      - ${REDIS_PASSWORD}
+      - ${PASSWORD}
     volumes:
-      - ${HOME}/docker/redis/data:/data
+      - redis_data:/data
     healthcheck:
-      test: [ "CMD", "redis-cli", "-a", "${REDIS_PASSWORD}", "ping" ]
+      test: [ "CMD", "redis-cli", "-a", "${PASSWORD}", "ping" ]
       interval: 5s
       timeout: 10s
       retries: 10
@@ -76,7 +69,7 @@ services:
 
   # ===================== One-API =====================
   one-api:
-    image: justsong/one-api:latest
+    image: justsong/one-api:v0.6.11-preview.7
     container_name: one-api
     platform: linux/amd64
     restart: unless-stopped
@@ -84,20 +77,149 @@ services:
       - "3001:3000"
     environment:
       TZ: ${TZ}
-      SQL_DSN: ${ONEAPI_DB_USER}:${ONEAPI_DB_PASS}@tcp(mysql:3306)/${ONEAPI_DB_NAME}?charset=utf8mb4&parseTime=True&loc=Local
+      SQL_DSN: ${USERNAME}:${PASSWORD}@tcp(mysql:3306)/oneapi?charset=utf8mb4&parseTime=True&loc=Local
+    volumes:
+      - oneapi_data:/data
     depends_on:
       - mysql
+    healthcheck:
+      test: [ "CMD-SHELL", "wget -qO- http://127.0.0.1:3000/api/status || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
     networks:
       - ai-agent
 
-#  # ===================== Ollama =====================
-#  ollama:
-#    image: ollama/ollama:latest
-#    container_name: ollama
-#    restart: unless-stopped
-#    volumes:
-#      - ${HOME}/docker/ollama:/root/.ollama
-#    ports:
-#      - "11434:11434"
-#    networks:
-#      - ai-agent
+  # ===================== Elasticsearch =====================
+  elasticsearch:
+    image: elasticsearch:7.17.28
+    container_name: elasticsearch
+    restart: unless-stopped
+    ports:
+      - "9200:9200"
+    environment:
+      - discovery.type=single-node
+      - cluster.name=docker-cluster
+      - ES_JAVA_OPTS=-Xms256m -Xmx256m
+      - xpack.security.enabled=false
+    volumes:
+      - elasticsearch_data:/usr/share/elasticsearch/data
+    networks:
+      - ai-agent
+
+  # ===================== Prometheus =====================
+  prometheus:
+    image: prom/prometheus:v2.47.2
+    container_name: prometheus
+    restart: unless-stopped
+    ports:
+      - "9090:9090"
+    volumes:
+      - prometheus_data:/prometheus
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    networks:
+      - ai-agent
+
+  # ===================== Grafana =====================
+  grafana:
+    image: grafana/grafana:10.2.0
+    container_name: grafana
+    restart: unless-stopped
+    ports:
+      - "3000:3000"
+    volumes:
+      - grafana_data:/var/lib/grafana
+    depends_on:
+      - prometheus
+    networks:
+      - ai-agent
+
+  # ===================== Grafana MCP =====================
+  grafana-mcp:
+    image: mcp/grafana
+    container_name: grafana-mcp
+    restart: unless-stopped
+    ports:
+      - "8000:8000"
+    environment:
+      - GRAFANA_URL=http://grafana:3000
+      - GRAFANA_API_KEY=${GRAFANA_API_KEY}
+    depends_on:
+      - grafana
+    networks:
+      - ai-agent
+
+  # ===================== Node Exporter =====================
+  node-exporter:
+    image: prom/node-exporter:v1.9.1
+    container_name: node-exporter
+    restart: unless-stopped
+    ports:
+      - "9100:9100"
+    command:
+      - "--collector.textfile.directory=/host/tmp"
+    volumes:
+      - ./node-exporter:/host/tmp:ro
+    networks:
+      - ai-agent
+
+  # ===================== MCP Servers =====================
+  mcp-server-csdn:
+    image: dasi0227/mcp-server-csdn:0.1.0
+    container_name: mcp-server-csdn
+    restart: unless-stopped
+    ports:
+      - "9001:9001"
+    environment:
+      TZ: ${TZ}
+      CSDN_COOKIE: ${CSDN_COOKIE}
+      ARTICLE_COVER_URL: ${CSDN_COVER_URL}
+    networks:
+      - ai-agent
+
+  mcp-server-wecom:
+    image: dasi0227/mcp-server-wecom:0.1.0
+    container_name: mcp-server-wecom
+    restart: unless-stopped
+    ports:
+      - "9002:9002"
+    environment:
+      TZ: ${TZ}
+      AGENT_ID: ${WECOM_AGENT_ID}
+      CORP_ID: ${WECOM_CORP_ID}
+      CORP_SECRET: ${WECOM_CORP_SECRET}
+    networks:
+      - ai-agent
+
+  mcp-server-amap:
+    image: dasi0227/mcp-server-amap:0.1.0
+    container_name: mcp-server-amap
+    restart: unless-stopped
+    ports:
+      - "9003:9003"
+    environment:
+      TZ: ${TZ}
+      API_KEY: ${AMAP_API_KEY}
+    networks:
+      - ai-agent
+
+volumes:
+  pgvector_data:
+    external: true
+  mysql_data:
+    external: true
+  redis_data:
+    external: true
+  oneapi_data:
+    external: true
+  elasticsearch_data:
+    external: true
+  prometheus_data:
+    external: true
+  grafana_data:
+    external: true
+
+networks:
+  ai-agent:
+    external: true
