--- a/backend/docs/docker/docker-compose.yml
+++ b/backend/docs/docker/docker-compose.yml
@@ -1,28 +1,4 @@
 services:
-  # ===================== PostgreSQL =====================
-  pgvector:
-    image: pgvector/pgvector:pg16
-    container_name: pgvector
-    restart: unless-stopped
-    ports:
-      - "5432:5432"
-    environment:
-      POSTGRES_USER: ${USERNAME}
-      POSTGRES_PASSWORD: ${PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB_NAME}
-      PGPASSWORD: ${PASSWORD}
-      TZ: ${TZ}
-    volumes:
-      - pgvector_data:/var/lib/postgresql/data
-      - ./pgvector/table.sql:/docker-entrypoint-initdb.d/table.sql:ro
-    healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -h localhost -U ${USERNAME} -d ${POSTGRES_DB_NAME}" ]
-      interval: 5s
-      timeout: 10s
-      retries: 10
-    networks:
-      - ai-agent
-
   # ===================== MySQL =====================
   mysql:
     image: mysql:8.0.40
@@ -31,11 +7,16 @@ services:
     ports:
       - "3306:3306"
     environment:
+      MYSQL_USER: ${USERNAME}
+      MYSQL_PASSWORD: ${PASSWORD}
       MYSQL_ROOT_PASSWORD: ${PASSWORD}
       TZ: ${TZ}
     volumes:
       - mysql_data:/var/lib/mysql
-      - ./mysql:/docker-entrypoint-initdb.d:ro
+      - ./mysql/my.cnf:/etc/mysql/conf.d/my.cnf:ro
+      - ./mysql/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+    depends_on:
+      - pgvector
     healthcheck:
       test: ["CMD-SHELL", "mysqladmin ping -h localhost -p${PASSWORD} --silent"]
       interval: 5s
@@ -53,14 +34,39 @@ services:
       - "6379:6379"
     command:
       - redis-server
+      - /usr/local/etc/redis/redis.conf
       - --appendonly
       - "yes"
       - --requirepass
       - ${PASSWORD}
     volumes:
       - redis_data:/data
+      - ./redis/redis.conf:/usr/local/etc/redis/redis.conf:ro
     healthcheck:
       test: [ "CMD", "redis-cli", "-a", "${PASSWORD}", "ping" ]
+      interval: 5s
+      timeout: 10s
+      retries: 10
+    networks:
+      - ai-agent
+
+  # ===================== PostgreSQL =====================
+  pgvector:
+    image: pgvector/pgvector:0.7.4-pg16
+    container_name: pgvector
+    restart: unless-stopped
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_DB: ai-agent
+      POSTGRES_USER: ${USERNAME}
+      POSTGRES_PASSWORD: ${PASSWORD}
+      TZ: ${TZ}
+    volumes:
+      - pgvector_data:/var/lib/postgresql/data
+      - ./pgvector/table.sql:/docker-entrypoint-initdb.d/table.sql:ro
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -h localhost -U ${USERNAME} -d ai-agent" ]
       interval: 5s
       timeout: 10s
       retries: 10
@@ -71,13 +77,12 @@ services:
   one-api:
     image: justsong/one-api:v0.6.11-preview.7
     container_name: one-api
-    platform: linux/amd64
     restart: unless-stopped
     ports:
       - "3001:3000"
     environment:
-      TZ: ${TZ}
       SQL_DSN: ${USERNAME}:${PASSWORD}@tcp(mysql:3306)/oneapi?charset=utf8mb4&parseTime=True&loc=Local
+      TZ: ${TZ}
     volumes:
       - oneapi_data:/data
     depends_on:
@@ -88,79 +93,6 @@ services:
       timeout: 5s
       retries: 5
       start_period: 10s
-    networks:
-      - ai-agent
-
-  # ===================== Elasticsearch =====================
-  elasticsearch:
-    image: elasticsearch:7.17.28
-    container_name: elasticsearch
-    restart: unless-stopped
-    ports:
-      - "9200:9200"
-    environment:
-      - discovery.type=single-node
-      - cluster.name=docker-cluster
-      - ES_JAVA_OPTS=-Xms256m -Xmx256m
-      - xpack.security.enabled=false
-    volumes:
-      - elasticsearch_data:/usr/share/elasticsearch/data
-    networks:
-      - ai-agent
-
-  # ===================== Prometheus =====================
-  prometheus:
-    image: prom/prometheus:v2.47.2
-    container_name: prometheus
-    restart: unless-stopped
-    ports:
-      - "9090:9090"
-    volumes:
-      - prometheus_data:/prometheus
-      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
-    networks:
-      - ai-agent
-
-  # ===================== Grafana =====================
-  grafana:
-    image: grafana/grafana:10.2.0
-    container_name: grafana
-    restart: unless-stopped
-    ports:
-      - "3000:3000"
-    volumes:
-      - grafana_data:/var/lib/grafana
-    depends_on:
-      - prometheus
-    networks:
-      - ai-agent
-
-  # ===================== Grafana MCP =====================
-  grafana-mcp:
-    image: mcp/grafana
-    container_name: grafana-mcp
-    restart: unless-stopped
-    ports:
-      - "8000:8000"
-    environment:
-      - GRAFANA_URL=http://grafana:3000
-      - GRAFANA_API_KEY=${GRAFANA_API_KEY}
-    depends_on:
-      - grafana
-    networks:
-      - ai-agent
-
-  # ===================== Node Exporter =====================
-  node-exporter:
-    image: prom/node-exporter:v1.9.1
-    container_name: node-exporter
-    restart: unless-stopped
-    ports:
-      - "9100:9100"
-    command:
-      - "--collector.textfile.directory=/host/tmp"
-    volumes:
-      - ./node-exporter:/host/tmp:ro
     networks:
       - ai-agent
 
@@ -204,21 +136,84 @@ services:
     networks:
       - ai-agent
 
+  # ===================== Tools =====================
+  elasticsearch:
+    image: elasticsearch:7.17.28
+    container_name: elasticsearch
+    restart: unless-stopped
+    ports:
+      - "9200:9200"
+    environment:
+      - network.host=0.0.0.0
+      - discovery.type=single-node
+      - ES_JAVA_OPTS=-Xms256m -Xmx256m
+      - xpack.security.enabled=false
+      - TZ=${TZ}
+    volumes:
+      - elasticsearch_data:/usr/share/elasticsearch/data
+    networks:
+      - ai-agent
+
+  prometheus:
+    image: prom/prometheus:v2.47.2
+    container_name: prometheus
+    restart: unless-stopped
+    ports:
+      - "9090:9090"
+    volumes:
+      - prometheus_data:/prometheus
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    networks:
+      - ai-agent
+
+  grafana:
+    image: grafana/grafana:10.2.0
+    container_name: grafana
+    restart: unless-stopped
+    ports:
+      - "3000:3000"
+    volumes:
+      - grafana_data:/var/lib/grafana
+    depends_on:
+      - prometheus
+    networks:
+      - ai-agent
+
+  grafana-mcp:
+    image: mcp/grafana
+    container_name: grafana-mcp
+    restart: unless-stopped
+    ports:
+      - "8000:8000"
+    environment:
+      - GRAFANA_URL=http://grafana:3000
+      - GRAFANA_API_KEY=${GRAFANA_API_KEY}
+    depends_on:
+      - grafana
+    networks:
+      - ai-agent
+
+  node-exporter:
+    image: prom/node-exporter:v1.9.1
+    container_name: node-exporter
+    restart: unless-stopped
+    ports:
+      - "9100:9100"
+    command:
+      - "--collector.textfile.directory=/host/tmp"
+    volumes:
+      - ./node-exporter:/host/tmp:ro
+    networks:
+      - ai-agent
+
 volumes:
   pgvector_data:
-    external: true
   mysql_data:
-    external: true
   redis_data:
-    external: true
   oneapi_data:
-    external: true
   elasticsearch_data:
-    external: true
   prometheus_data:
-    external: true
   grafana_data:
-    external: true
 
 networks:
   ai-agent:
