--- a/backend/docs/docker/docker-compose.yml
+++ b/backend/docs/docker/docker-compose.yml
@@ -77,6 +77,7 @@ services:
   one-api:
     image: justsong/one-api:v0.6.11-preview.7
     container_name: one-api
+#    platform: linux/amd64
     restart: unless-stopped
     ports:
       - "3001:3000"
