--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ nbproject/
 **/application-*.yaml
 **/application-*.properties
 !**/application.yml
+!**/application-dev.yml
 !**/application.yaml
 !**/application.properties
 
