更新 dockerfile，部署 mcp 到 docker

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,7 @@ nbproject/
 **/.env
 **/.env.*
 !**/.env.example
+!frontend/**/.env.*
 
 # ==================== Frontend (Node / Vite) ====================
 **/node_modules/
